prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_02.zkc
//error:3:13-19:unknown symbol
fn main() {
  var items:[u8;a]
  items[0] = 1
  return
}
